--- a/index.html
+++ b/index.html
@@ -4,15 +4,65 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+	<title>Lactuca Guide</title>
+	<link rel="icon" type="image/png" href="./images/icon.png"> 
 	<link rel="stylesheet" href="style.css">
-	<title>Seo Sim Guide</title>
+	<!-- ICON COLOR: #F03 -->
 </head>
 
 <body>
-	<header><h2>SEO SIM</h2></header>
-	<main></main>
-	<footer></footer>
+	
+	
+	<header>
+		<div class="container">
+			<img class="logo-img" src="./images/icon.png" alt="logo-img">
+			<h2 class=logo-text>LACTUCA</h2>
+		</div>
+	</header>
+
+	<main>
+		<div class="container">
+			<h1 class="main-title">RESPOSIVE PAGES GUIDE</h1>
+			<p class="main-subtitle">Tips and Reasons to Build Responsive Websites</p>
+			<img class="devices-img" src="./images/devices.webp" alt="devices-img">
+			
+			<section>
+				<h2 class="highlightColor">Complete the form to get your Free Guide.</h2>
+				<form action="" method="get">
+					<label for="fname">FIRST NAME<span class="highlightColor">*</span></label><br>
+					<input type="text" id="fname" name="FNAME"><br>
+
+					<label for="lname">LAST NAME<span class="highlightColor">*</span></label><br>
+					<input type="text" id="lname" name="LNAME"><br>
+
+					<label for="email">COMPANY EMAIL<span class="highlightColor">*</span></label><br>
+					<input type="email" id="email" name="EMAIL"><br>
+
+					<label for="compname">COMPANY NAME<span class="highlightColor">*</span></label><br>
+					<input type="text" id="compname" name="COMPNAME"><br>
+
+					<label for="comptype">COMPANY TYPE<span class="highlightColor">*</span></label><br>
+					<select name="comptype" id="compname">
+						<option value disabled selected>- Please Select One -</option>
+						<option value="manufacturer">Manufacturer</option>
+						<option value="distributor">Distributor</option>
+						<option value="logistics">Logistics</option>
+						<option value="industrialservices">Industrial Services</option>
+						<option value="agency">Agency</option>
+						<option value="other">Other</option>
+					</optgroup>
+					</select>
+				</form>
+			</section>
+		
+		</div>
+	</main>
+
+	<footer>
+		<div class="container">
+			FOOOTER!!!!!!
+		</div>
+	</footer>
 
 </body>
 </html>
